# K4GSR-HXNP-SHIN-PUBLIC

./: .gitignore  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  undulator_calculator_v2.html  virtual_beamline_nanoprobe_V4_35.html  virtual_beamline_nanoprobe_V4_36.html  virtual_beamline_nanoprobe_V4_36_bundle.html  virtual_beamline_nanoprobe_V4_37.html  virtual_beamline_nanoprobe_V4_37_bundle.html  virtual_beamline_nanoprobe_V4_38.html  virtual_beamline_nanoprobe_V4_38_bundle.html
Scripts/: add_front_matter.py  build.py  build_doc_index.py  generate_crystal_psi.py  generate_gas_mu.py  generate_optconst.py  inject_psi_into_bundle.py  layout_to_xrt.py  publish_main.bat  translate_i18n.py
deploy/: README.md  beamline_ctl.sh  config.env  deploy.sh  setup_production.sh
js/: main.js
paper/: latency_results.json  measure_latency.py
ptycho/: .gitignore  CLAUDE.md  _test_quick_scenarioB.py  fsc.py  synth_ptycho.py
server/: .env.example  README.md  augment_training_data.py  ca_bridge.py  constants.py  experiment_engine.py  generate_training_data.py  lora_colab_guide.md  lora_finetune.py  nano_scanner_service.py  nlp_agent.py  pv_discovery.py  pv_store.py  rag_engine.py  requirements.txt  requirements_qserver.txt  requirements_sim.txt  requirements_tiled.txt  run_vllm_benchmark.sh  safety.py  science_advisor.py  server.py  setup_remote_ollama.sh  setup_workstation.sh  simulation_server.py  start_beamline.sh  start_vllm.sh  stop_beamline.sh  test_adsim_bluesky.py  test_adsim_scenarios.py  test_nlp_benchmark.py  test_p4p_ca.py  (+6 more)
(+425 files in other folders)
